@@ -3,9 +3,11 @@
 // recognized in your jurisdiction.
 // See file LICENSE for detail or copy at http://jsoncpp.sourceforge.net/LICENSE
 
-#include <json/reader.h>
-#include <json/value.h>
-#include "json_tool.h"
+#if !defined(JSON_IS_AMALGATED)
+# include <json/reader.h>
+# include <json/value.h>
+# include "json_tool.h"
+#endif // if !defined(JSON_IS_AMALGATED)
 #include <utility>
 #include <cstdio>
 #include <cassert>
